Bug#12352191 NDB_MGMD NODES DON'T SEE EACH OTHER AS CONNECTED UNTIL END OF SYSTEM RESTART.  - Add specialized function status_mgmd() and status_api() used to    retrive version and status for API and MGM nodes.  - Make status_mgmd() aware that other MGM nodes are connected directly    to own node with transporter  - Fix missing assignment of mysql_version in Qmgr  - Return the connected adress from transporter also for MGM nodes  - Also fix bug#48301 by adding a new status CONNECTED to be used    when we know the node is connected(this stats was previously only    indicated by version != 0)